infrastructure/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-httproute
  namespace: argocd
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway
    name: internal-gateway
    namespace: envoy-gateway
    sectionName: http
  hostnames:
  - "localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /argocd
    backendRefs:
    - group: ''	
      kind: Service
      name: argocd-server
      port: 80
      weight: 1
